# dialog-whatsapp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  project_config.sample.toml  pyproject.toml  responses.py  settings.py
.github/: pypi.yml
dialog_whatsapp/: __init__.py  plugin.py  responses.py  settings.py
